# subbers

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: error.rs  lib.rs  main.rs  svc.rs
src/game/: core.rs  data.rs  event.rs  mod.rs  state.rs  view.rs
src/http/: core.rs  games_templates.rs  icon_templates.rs  layout_templates.rs  mod.rs  players_templates.rs
src/http/assets/: theme.css
src/player/: core.rs  mod.rs  view.rs
src/repo/: core.rs  in_memory.rs  mod.rs  sqlite.rs
